<resources>
    <string name="app_name">PastaGuiede</string>
    <string name="pagety_1">špagety</string>
    <string name="pagety_2">sýrová omáčka</string>
    <string name="pagety_3">boloňská omáčka</string>
    <string name="calc">calc</string>
    <string name="pasta">špagety</string>
    <string name="pick">pick</string>
    <string name="selected_number_serving">Selected Number Serving</string>
    <string name="suroviny">suroviny</string>
    <string name="po_et_porc">Počet porcí</string>
    <string name="pagety">špagety</string>
    <string name="ingredience">ingredience</string>
    <string name="back">BACK</string>
    <string name="pagety_n_a">Špagety: N/A</string>
    <string name="omacka_n_a">Omacka: N/A</string>
    <string-array name="spinnerVyber">
        <item>Omáčka</item>
        <item>Boloňská omáčka</item>
        <item>Sýrová omáčka</item>
    </string-array>
</resources>
