<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cz.god.is.hony.spagetyapp.StartMenuActivity">

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pagety"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:onClick="ukazSpagety"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pagety_2"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:onClick="ukazSpagety"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="183dp"
        android:layout_below="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pagety_3"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:onClick="ukazSpagety"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="350dp"
        android:layout_below="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2" />
    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calc"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:onClick="ukazSpagety"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="350dp"
        android:layout_below="@+id/button3"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignStart="@+id/button3" />

</RelativeLayout>
